fix: tab overflow

--- a/app/assets/stylesheets/responsive-profile.scss
+++ b/app/assets/stylesheets/responsive-profile.scss
@@ -12,6 +12,16 @@
 			margin-right:0;
 		}
 
+		div.profileTab {
+			padding-right: 0;
+			min-width:290px;
+		}
+
+		.profileTabLabel {
+
+		    margin-right: 30px;
+		}
+
 		.confirmConnectModal {
 
 			& {
